# GridClash

./: .gitignore  CODE_REVIEW.md  README.md  client.py  main.py  play_vs_bots.py  pyproject.toml  server.py
common/: __init__.py  protocol.py
src/: UI_elements.py  __init__.py  client.py  client_headless.py  constants.py  protocol.py  server.py
tests/: generate_suite_report.py  instrumented_client.py  instrumented_server.py  run_all_tests.sh  run_baseline.py  run_test_scenario.py  verify_smoothing.py
tests/plots/: auto_plotter.py  plotter.py  plotter2.py  suite_report_latest(2).csv  suite_report_latest.csv
tests/results/: suite_report_latest.csv
tests/results/1765651816_42/: client_0_metrics.csv  client_0_positions.csv  client_1_metrics.csv  client_1_positions.csv  client_2_metrics.csv  client_2_positions.csv  client_3_metrics.csv  client_3_positions.csv  server_positions.csv  summary.json  trace.pcap
tests/results/1765651885_42/: client_0_metrics.csv  client_0_positions.csv  client_1_metrics.csv  client_1_positions.csv  client_2_metrics.csv  client_2_positions.csv  client_3_metrics.csv  client_3_positions.csv  server_positions.csv  summary.json  trace.pcap
tests/results/1765656817_42/: client_0_metrics.csv  client_0_positions.csv  client_1_metrics.csv  client_1_positions.csv  client_2_metrics.csv  client_2_positions.csv  client_3_metrics.csv  client_3_positions.csv  detailed_metrics.csv  server_positions.csv  summary.json  trace.pcap
tests/results/25-12_21-08/: client_0_metrics.csv  client_0_positions.csv  client_1_metrics.csv  client_1_positions.csv  (+8 more)
